--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "travel"
@@ -14,5 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
