--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "Lyubomir Grigorov",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.0"
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.0",
+    "mongoose": "^6.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
