--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,6 +12,7 @@ services:
       - NODE_ENV=development  
       - MONGO_USER=user
       - MONGO_PASSWORD=password 
+      - JWT_PRIVATE_KEY=secretkey
     command: npm run dev   
   mongodb:
     environment:
