--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "Lyubomir Grigorov",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1"
   },
   "devDependencies": {
