--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,10 @@
 version: "3"
 services:
+  nginx:
+    ports:
+      - "80:80"
   node-app-image:
-   build:
+    build:
       context: .
       args:
         NODE_ENV: production
